--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
@@ -247,17 +247,17 @@
         </thead>
         <tbody id="newTable" >
           <tr *ngFor="let item of JsonOutgetReporteComunicaion">
-            <th scope="row">{{ item.idTipoComunicacion.descTipoComunicacion }}</th>
-            <th scope="row">{{ item.idTipoDocumento.descTipoDocumento }}</th>
+            <th scope="row">{{ item.descTipoComunicacion }}</th>
+            <th scope="row">{{ item.descTipoDocumento }}</th>
             <td>{{ item.codCorrespondenciaEnc }}</td>
-            <td style="cursor:help" title="Nombre: {{ item.idDeptoFuncional.descDeptoFuncional }}">{{ item.idDeptoFuncional.inicialesDeptoFuncional }}</td>
-            <td>{{ item.idFuncionarioAsignado.nombre1Funcionario }} - {{ item.idFuncionarioAsignado.apellido1Funcionario }}</td>
-            <td>{{ item.fechaIngreso.timestamp | generateDate }}</td>
-            <td>{{ item.fechaFinalizacion.timestamp | generateDate }}</td>
-            <td style="cursor:help" title="Nombre: {{ item.idInstitucion.perfilInstitucion }}" >{{ item.idInstitucion.descInstitucion }}</td>
+            <td style="cursor:help" title="Nombre: {{ item.descDeptoFuncional }}">{{ item.inicialesDeptoFuncional }}</td>
+            <td>{{ item.nombre1Funcionario }} - {{ item.apellido1Funcionario }}</td>
+            <td>{{ item.fechaIngreso | date :'dd-MMM-yyyy' }}</td>
+            <td>{{ item.fechaFinalizacion | date :'dd-MMM-yyyy' }}</td>
+            <td style="cursor:help" title="Nombre: {{ item.perfilInstitucion }}" >{{ item.descInstitucion }}</td>
             <td>{{ item.temaComunicacion }}</td>
             <td>{{ item.descCorrespondenciaEnc }}</td>
-            <td>{{ item.idEstado.descripcionEstado }}</td>
+            <td>{{ item.descripcionEstado }}</td>
           </tr>
         </tbody>
       </table>
