--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/agregar.actividad.component.html
@@ -40,33 +40,33 @@
               <th>Tema Comunicación</th>
               <th>Fecha Creación</th>
               <th>Fecha Entrega.</th>
-              <th>Accion</th>
+              <th>Acción</th>
             </tr>
         </thead>
-        
+
         <tbody >
             <tr *ngFor="let item of JsonOutgetlistaOficiosAll | searchfilter:codCorr:search ">
-              <td [ngClass]="{ 'text-warning': item.idEstado.idEstado == 3, 'text-danger' : item.idEstado.idEstado == 6,
-                                'text-primary' : item.idEstado.idEstado == 7, 'text-success' : item.idEstado.idEstado == 5 }" >
+              <td [ngClass]="{ 'text-warning': item.idEstado == 3, 'text-danger' : item.idEstado == 6,
+                                'text-primary' : item.idEstado == 7, 'text-success' : item.idEstado == 5 }" >
                 <!-- <p class="alert alert-primary"> -->
-                  {{ item.idEstado.descripcionEstado }}
+                  {{ item.descripcionEstado }}
                 <!-- </p> -->
               </td>
               <td> {{ item.codCorrespondenciaEnc }} </td>
               <td> {{ item.codReferenciaSreci }} </td>
-              <td title="{{ item.idInstitucion.perfilInstitucion }}"> {{ item.idInstitucion.descInstitucion }} </td>
-              <td> {{ item.temaComunicacion }} </td>
+              <td style="cursor: help" title="Descripcion: {{ item.perfilInstitucion }}"> {{ item.descInstitucion }} </td>
+              <td style="cursor: help" title="Descripcion: {{ item.descCorrespondenciaEnc }}"> {{ item.temaComunicacion }} </td>
                 <!-- <td> {{ timeConverter( item.fechaMaxEntrega.timestamp )  }} </td> -->
-              <td> {{ item.fechaIngreso.timestamp | generateDate }} </td>
-              <td> {{ item.fechaMaxEntrega.timestamp | generateDate }} </td>
+              <td> {{ item.fechaIngreso | date :'dd-MMM-yyyy' }} </td>
+              <td> {{ item.fechaMaxEntrega | date :'dd-MMM-yyyy' }} </td>
               <td> <a href="/#" (click)="datoOficio( item.codCorrespondenciaEnc, item.codReferenciaSreci,
-                      item.idDeptoFuncional.idDeptoFuncional,
-                      item.idFuncionarioAsignado.nombre1Funcionario, item.idFuncionarioAsignado.apellido1Funcionario,
-                      item.idFuncionarioAsignado.nombre2Funcionario, item.idFuncionarioAsignado.apellido2Funcionario,
-                      item.idFuncionarioAsignado.idFuncionario, item.idEstado.idEstado )"
+                      item.idDeptoFuncional,
+                      item.nombre1Funcionario, item.apellido1Funcionario,
+                      item.nombre2Funcionario, item.apellido2Funcionario,
+                      item.idFuncionario, item.idEstado )"
                     data-toggle="modal" data-target="#t_and_c_m" >
                     <!-- <i class="material-icons" data-toggle="tooltip" data-placement="top" title="Asignar" >assignment_ind</i> -->
-                    <img src="/assets/icons/comunicacion/seo-report_blue_24x24.png" class="d-inline-block align-top" alt="" title="Asignar">
+                    <img src="/assets/icons/comunicacion/seo-report_blue_24x24.png" class="d-inline-block align-top" alt="" title="Asignar Comunicación">
                   </a> </td>
             </tr>
         </tbody>
@@ -151,10 +151,10 @@
                   <td> {{ item.idTipoFuncionario.descTipoFuncionario }} </td>
                   <td> {{ item.emailFuncionario }} </td>
                   <td> {{ item.celularFuncionario }} </td>
-                  <td *ngIf="loading_tr == 'hide'" > <a style="cursor: pointer;" class="nav-link" 
+                  <td *ngIf="loading_tr == 'hide'" > <a style="cursor: pointer;" class="nav-link"
                           (click)="confirmUser( codOficioIntModal, codOficioRefModal, item.idFuncionario,
                                 item.nombre1Funcionario, item.apellido1Funcionario,
-                                item.nombre2Funcionario, item.apellido2Funcionario )"                          
+                                item.nombre2Funcionario, item.apellido2Funcionario )"
                             data-toggle="modal" data-target="#myModalInstruccion">
                     <span [ngClass]="{ 'badge badge-pill badge-warning': item.nombre1Funcionario == nombre1FuncModal,
                                         'badge badge-pill badge-primary': item.nombre1Funcionario != nombre1FuncModal}"
@@ -187,8 +187,8 @@
           </button>
           <h4 class="modal-title" id="myModalLabel">Instrucción de la Asignación</h4>
         </div>
-        <div class="modal-body">          
-              <form #AsignarForm="ngForm" name="AsignarForm" role="form">  
+        <div class="modal-body">
+              <form #AsignarForm="ngForm" name="AsignarForm" role="form">
             <div class="col-md-12 mb-4">
               <h4 >Detalle de la Instrucción</h4>
               <!-- <input type="text" class="form-control" id="validationDefault01" placeholder="Detalle de la Instruccion"
@@ -203,7 +203,7 @@
                <button type="button" id="closeModalAsignaCom" class="btn btn-success" data-dismiss="modal" style="cursor: pointer"
                      (click)="asignarOficioFuncionario( codOficioIntModalAsignacion, codOficioRefModalAsignacion, idFuncModalAsignacion,
                            nombre1FuncModalAsignacion, apellido1FuncModalAsignacion,
-                           nombre2FuncModalAsignacion, apellido2FuncModalAsignacion )" 
+                           nombre2FuncModalAsignacion, apellido2FuncModalAsignacion )"
                            [disabled]="!AsignarForm.valid">Guardar
               </button>
                <button type="button" id="closeModalFinCom" class="btn btn-danger" data-dismiss="modal" style="cursor: pointer">Cerrar</button>
