--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.html
@@ -42,7 +42,8 @@
           <div class="col-xs-12 col-sm-6 col-md-4">
             <div class="form-group">
               <select #idTipoDocumento="ngModel" class="form-control" name="idTipoDocumento" id="idTipoDocumento" required
-                    ngControl="idTipoDocumento" [(ngModel)]="comunicacion.idTipoDocumento" (change)="getCodigoCorrespondencia()" >
+                    ngControl="idTipoDocumento" [(ngModel)]="comunicacion.idTipoDocumento"
+                    (change)="getCodigoCorrespondencia()" >
                   <option value="0">Tipo de comunicación </option>
                   <option *ngFor="let list of JsonOutgetlistaTiposDocumentos" value="{{ list.idTipoDocumento }}" > {{ list.descTipoDocumento }}</option>
               </select>
@@ -105,7 +106,8 @@
           <div class="col-xs-12 col-sm-6 col-md-4">
   					<div class="form-group">
               <select #idTipoInstitucion="ngModel" class="form-control" name="idTipoInstitucion" id="idTipoInstitucion"
-                    ngControl="idTipoInstitucion" [(ngModel)]="comunicacion.idTipoInstitucion" tabindex="5" (change)="getlistaInstituciones()" >
+                    ngControl="idTipoInstitucion" [(ngModel)]="comunicacion.idTipoInstitucion" tabindex="5"
+                    (change)="getlistaInstituciones()" >
                   <option value="0" >Tipo de Institución</option>
                   <option *ngFor="let list of JsonOutgetlistaTipoInstitucion" value="{{ list.idTipoInstitucion }}">{{ list.descTipoInstitucion }}</option>
               </select>
