--- a/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/layout.component.html
@@ -82,7 +82,9 @@
                     <a class="dropdown-item" [routerLink]="['solicitud-cambio-fecha']" routerLinkActive="active">
                       <img src="/assets/icons/comunicacion/spring-desktop-calendar-variant_blue_24x24.png" class="d-inline-block align-top" alt="">
                       Solicitud de Cambio de Fecha / Entrega</a>
-                    <!-- <a class="dropdown-item" [routerLink]="['mantenimiento-instituciones']" routerLinkActive="active">Cambio de Fecha / Entrega</a> -->
+                    <a class="dropdown-item" [routerLink]="['mantenimiento-instituciones']" routerLinkActive="active">
+                        <img src="/assets/icons/comunicacion/businessmen.png" class="d-inline-block align-top" alt="">
+                      Agregar / Editar Instituciones</a>
                     <!-- <li class="nav-item dropdown"><a class="dropdown-item" [routerLink]="['mantenimiento-instituciones']" routerLinkActive="active">Solicitud de Cambio d Fecha</a></li> -->
 
                 <!-- <hr> -->
