--- a/Angular_SICDOC/sicdoc/src/app/views/mantenimientos/instituciones/instituciones.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/mantenimientos/instituciones/instituciones.component.html
@@ -1,8 +1,10 @@
 <div class="container">
-  <div class="container">
+  <h2>Mantenimiento de Instituciones <small> | SICDOC.</small></h2>
+  <hr class="colorgraph">
+
   <!-- Datos Generales de los Usuarios -->
-  <div class="row">
-      <div class="col-xs-12 col-sm-8 col-md-9 col-sm-offset-2 col-md-offset-3">
+  <div class="row-fluid">
+      <div class="col-xs-12 col-md-12 col-lg-12">
         <!-- Div que representan las Acciones al Ingresar un Usuario -->
         <br>
         <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="status == 'success'" >
@@ -20,32 +22,182 @@
         </div>
 
       <!-- Formulario de la Ventana de Mantenimiento -->
-      <form #mantenimientoForm="ngForm" (ngSubmit)="onSubmit(mantenimiento)" name="mantenimiento" role="form">
-  			<h2>Mantenimiento de Instituciones <small> | SICDOC.</small></h2>
-  			<hr class="colorgraph">
-        <div class="panel-heading">
-          <h4 class="panel-title">
-            <a data-toggle="collapse" href="#datosGen">Datos Generales</a>
-          </h4>
-        </div>
+      
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#datosGen">Datos Generales</a>
+        </h4>
+      </div>
+
+      <div class="panel-collapse collapse in" id="datosGen">        
+      <form #mantenimientoForm="ngForm" (ngSubmit)="onSubmit(mantenimientoForm)" name="mantenimientoForm" role="form">
         <hr>
-        <!-- <div class="panel-collapse collapse in" id="datosGen"> -->
           <div class="row">
-    				<div class="col-xs-12 col-sm-6 col-md-6">
+    				<div class="col-xs-12 col-sm-6 col-md-3">
     					<div class="form-group" >
-                 <input #codigoInsitucion="ngModel" type="text" name="codigoInsitucion" id="codigoInsitucion"
-                     ngControl="codigoInsitucion" [(ngModel)]="_modIntituciones.codUsuario"
-                     class="form-control input-lg" required placeholder="Codigo de la Institucion" tabindex="1" maxlength="13" minlength="5">
-                    <small class="form-text text-muted" *ngIf="codigoInsitucion.errors?.required" >Codigo de la Institucion</small>
-                    <small class="form-text text-muted" *ngIf="codigoInsitucion.errors?.minlength" >Se nesesita por lo menos {{ codigoInsitucion.errors.minlength.requiredLength }} caracteres</small>
+                 <input #codInstitucion="ngModel" type="text" name="codInstitucion" id="codInstitucion"
+                     ngControl="codInstitucion" [(ngModel)]="_modIntituciones.codInstitucion" disabled
+                     class="form-control input-lg" placeholder="Codigo de la Institucion" tabindex="1" maxlength="13" minlength="5">
+                    <!-- <small class="form-text text-muted" *ngIf="codInstitucion.errors?.required" >Codigo de la Institucion</small> -->
+                    <!-- <small class="form-text text-muted" *ngIf="codInstitucion.errors?.minlength" >Se nesesita por lo menos {{ codInstitucion.errors.minlength.requiredLength }} caracteres</small> -->
     					</div>
     				</div>
           </div>
-        <!-- </div> -->
+          <!-- Fila de Datos Generales -->
+          <div class="row">
+            <div class="col-xs-12 col-sm-4 col-md-3">
+              <div class="form-group" >
+                  <input #descInstitucion="ngModel" type="text" name="descInstitucion" id="descInstitucion"
+                      ngControl="descInstitucion" [(ngModel)]="_modIntituciones.descInstitucion"
+                      class="form-control input-lg" required placeholder="Acronimo de la Institucion" tabindex="2" maxlength="20" minlength="5">
+                    <small class="form-text text-muted" *ngIf="descInstitucion.errors?.required" >Acronimo de la Institucion</small>
+                    <small class="form-text text-muted" *ngIf="descInstitucion.errors?.minlength" >Se nesesita por lo menos {{ descInstitucion.errors.minlength.requiredLength }} caracteres</small>
+              </div>
+            </div>
+            <div class="col-xs-12 col-sm-8 col-md-9">
+              <div class="form-group" >
+                  <input #perfilInstitucion="ngModel" type="text" name="perfilInstitucion" id="perfilInstitucion"
+                      ngControl="perfilInstitucion" [(ngModel)]="_modIntituciones.perfilInstitucion"
+                      class="form-control input-lg" required placeholder="Descripcion de la Institucion" tabindex="3" maxlength="180" minlength="10">
+                    <small class="form-text text-muted" *ngIf="perfilInstitucion.errors?.required" >Descripcion de la Institucion</small>
+                    <small class="form-text text-muted" *ngIf="perfilInstitucion.errors?.minlength" >Se nesesita por lo menos {{ perfilInstitucion.errors.minlength.requiredLength }} caracteres</small>
+              </div>
+            </div>              
+        </div>
+        <!-- Fila de Datos Comunicacion -->
+        <div class="row">
+            <div class="col-xs-12 col-sm-4 col-md-8">
+              <div class="form-group" >
+                  <input #direccionInstitucion="ngModel" type="text" name="direccionInstitucion" id="direccionInstitucion"
+                      ngControl="direccionInstitucion" [(ngModel)]="_modIntituciones.direccionInstitucion"
+                      class="form-control input-lg" placeholder="Direccion de la Institucion" tabindex="4" maxlength="200" minlength="15">
+                    <!-- <small class="form-text text-muted" *ngIf="direccionInstitucion.errors?.required" >Direccion Obligatoria</small> -->
+                    <!-- <small class="form-text text-muted" *ngIf="direccionInstitucion.errors?.minlength" >Se nesesita por lo menos {{ direccionInstitucion.errors.minlength.requiredLength }} caracteres</small> -->
+              </div>
+            </div>
+            <div class="col-xs-3 col-sm-2 col-md-2">
+              <div class="form-group" >
+                  <input #telefonoInstitucion="ngModel" type="text" name="telefonoInstitucion" id="telefonoInstitucion"
+                      ngControl="telefonoInstitucion" [(ngModel)]="_modIntituciones.telefonoInstitucion"
+                      class="form-control input-lg" placeholder="Telefono" tabindex="5" >
+                    <!-- <small class="form-text text-muted" *ngIf="telefonoInstitucion.errors?.required" >Telefono</small> -->
+                    <!-- <small class="form-text text-muted" *ngIf="telefonoInstitucion.errors?.minlength" >Se nesesita por lo menos {{ telefonoInstitucion.errors.minlength.requiredLength }} caracteres</small> -->
+              </div>
+            </div>
+            <div class="col-xs-3 col-sm-2 col-md-2">
+                <div class="form-group" >
+                    <input #celularInstitucion="ngModel" type="text" name="celularInstitucion" id="celularInstitucion"
+                        ngControl="celularInstitucion" [(ngModel)]="_modIntituciones.celularInstitucion"
+                        class="form-control input-lg" placeholder="Celular" tabindex="6" >
+                      <!-- <small class="form-text text-muted" *ngIf="celularInstitucion.errors?.required" >Celular</small> -->
+                      <!-- <small class="form-text text-muted" *ngIf="celularInstitucion.errors?.minlength" >Se nesesita por lo menos {{ celularInstitucion.errors.minlength.requiredLength }} caracteres</small> -->
+                </div>
+              </div>              
+        </div>
+        <!-- Fila de Complementos -->
+        <div class="row">
+            <div class="col-xs-12 col-sm-4 col-md-6">
+              <div class="form-group" >
+                  <input #emailInstitucion="ngModel" type="text" name="emailInstitucion" id="emailInstitucion"
+                      ngControl="emailInstitucion" [(ngModel)]="_modIntituciones.emailInstitucion"
+                      class="form-control input-lg" placeholder="Email de la Institucion" tabindex="7" maxlength="13" minlength="5">
+                    <!-- <small class="form-text text-muted" *ngIf="emailInstitucion.errors?.required" >Direccion Obligatoria</small> -->
+                    <!-- <small class="form-text text-muted" *ngIf="emailInstitucion.errors?.minlength" >Se nesesita por lo menos {{ emailInstitucion.errors.minlength.requiredLength }} caracteres</small> -->
+              </div>
+            </div>
+            <!-- Lista de Paises -->
+  				<div class="col-xs-12 col-sm-4 col-md-2">
+              <div class="form-group">
+                <select #idPais="ngModel" class="form-control" name="idPais" id="idPais" required
+                      ngControl="idPais" [(ngModel)]="_modIntituciones.idPaisInstitucion" tabindex="8">
+                    <option value="0">País</option>
+                    <option *ngFor="let list of JsonOutgetlistaPaises" value="{{ list.idPais }}">{{ list.descPais }}</option>
+                </select>
+                <small class="form-text text-muted" *ngIf="idPais.value == 0 || idPais.value == null " >Debes Seleccionar un País</small>
+              </div>
+            </div>
 
+          <!-- Tipo de Institucion -->
+          <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="form-group">
+                <select #idTipoInstitucion="ngModel" class="form-control" name="idTipoInstitucion" id="idTipoInstitucion" required
+                      ngControl="idTipoInstitucion" [(ngModel)]="_modIntituciones.idTipoInstitucion" tabindex="9"
+                      (change)="getlistaInstituciones()" >
+                    <option value="0" >Tipo de Institución</option>
+                    <option *ngFor="let list of JsonOutgetlistaTipoInstitucion" value="{{ list.idTipoInstitucion }}">{{ list.descTipoInstitucion }}</option>
+                </select>
+                <small class="form-text text-muted" *ngIf="idTipoInstitucion.value == 0 || idTipoInstitucion.value == null " >Debes Seleccionar un tipo de Institución</small>
+              </div>
+            </div>         
+        </div>
+        <!-- Botones Accion del Formulario -->
+        <hr class="colorgraph">
+        <div class="row">
+          <div class="col-xs-4 col-md-2">
+              <input type="submit" value="Guardar" class="btn btn-primary btn-block btn-lg" tabindex="10" 
+                [disabled]="!mantenimientoForm.valid"  >
+          </div>
+          <div class="col-xs-4 col-md-2">
+  
+              <a  class="btn btn-success btn-block btn-lg"
+                 (click)="resetForm()" >Nuevo</a>
+          </div>
+        </div>
 
       </form> <!-- Fin del Formulario -->
+    </div> 
+    <!-- Fin del Colapsable -->
 
+      <hr>
+      <!-- Tabla de las Intituciones -->
+      <!-- Loader de Carga de los Datos -->
+      <div id="loader-2" *ngIf="loading == 'show' " style="margin-left:45%; margin-top:5%; margin-bottom:5%;">
+          <!-- <img src="assets/images/aguarde.gif" alt="Cargando Tareas"> -->
+          <img src="assets/images/832.gif" alt="Cargando Tareas">
+        </div>
 
+        <div class="col-xs-12 col-md-12 col-lg-12" *ngIf=" loading == 'hide'">        
+          <table id="example" class="table table-striped table-bordered" cellspacing="0"  >
+
+              <thead >
+                  <tr>                    
+                    <th>Id</th>                    
+                    <th>Nombre Institución</th>
+                    <th>Tipo Institución</th>
+                    <th>Pais Institución</th>
+                    <th>Direccion</th>
+                    <th>Email</th>
+                    <!-- <th>Telefono / Celular</th> -->
+                    <th>Fecha Creacion</th>
+                    <th>Ver</th>
+                  </tr>
+              </thead>
+      
+              <tbody >
+                  <tr *ngFor="let item of JsonOutgetlistaInstitucion ">                    
+                    <td> {{ item.codInstitucion }} </td>                    
+                    <td style="cursor: help" title="Descripcion: {{ item.perfilInstitucion }}"> {{ item.descInstitucion }} </td>
+                    <td> {{ item.descTipoInstitucion  }} </td>                    
+                    <td> {{ item.descPais  }} </td>                    
+                    <td > {{ item.direccionInstitucion }} </td>
+                    <td > {{ item.emailInstitucion }} </td>
+                    <!-- <td > {{ item.telefonoInstitucion }} - {{ item.celularInstitucion }} </td>                       -->
+                    <td> {{ item.fechaIngreso | date :'dd-MMM-yyyy' }} </td>                    
+                    <td> <a href="/#" (click)="datoInstitucion( 
+                            item.idInstitucion,
+                            item.codInstitucion,
+                            item.descInstitucion, item.perfilInstitucion,
+                            item.direccionInstitucion, item.telefonoInstitucion,
+                            item.celularInstitucion, item.emailInstitucion,
+                            item.idPais, item.idTipoInstitucion )"
+                          data-toggle="modal" data-target="#t_and_c_m" >                          
+                          <img src="/assets/icons/comunicacion/clipboard-edit-black-interface-symbol.png" class="d-inline-block align-top" alt="" title="Asignar Comunicación">
+                        </a> 
+                    </td>
+                  </tr>
+              </tbody>
+          </table>
+          
+        </div>
   </div>
-</div>
+  <!-- Fin de Container -->
