--- a/Angular_SICDOC/sicdoc/src/app/views/mantenimientos/instituciones/instituciones.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/mantenimientos/instituciones/instituciones.component.html
@@ -6,15 +6,14 @@
   <div class="row-fluid">
       <div class="col-xs-12 col-md-12 col-lg-12">
         <!-- Div que representan las Acciones al Ingresar un Usuario -->
-        <br>
-        <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="status == 'success'" >
+        <div class="alert alert-success alert-dismissible fade show" id="alertSuccess" role="alert" *ngIf="status == 'success'" >
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
           <strong>Bien hecho!</strong> {{ mensajes }}
         </div>
 
-        <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="status == 'error'" >
+        <div class="alert alert-danger alert-dismissible fade show" id="alertError" role="alert" *ngIf="status == 'error'" >
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -22,22 +21,28 @@
         </div>
 
       <!-- Formulario de la Ventana de Mantenimiento -->
-      
+
       <div class="panel-heading">
-        <h4 class="panel-title">
+        <h4 class="panel-title" >
           <a data-toggle="collapse" href="#datosGen">Datos Generales</a>
         </h4>
+        <small class="form-text text-muted">
+            (Expande para ver el detalle de la institución)
+        </small>
       </div>
 
-      <div class="panel-collapse collapse in" id="datosGen">        
+      <div class="panel-collapse collapse in" id="datosGen">
       <form #mantenimientoForm="ngForm" (ngSubmit)="onSubmit(mantenimientoForm)" name="mantenimientoForm" role="form">
         <hr>
           <div class="row">
     				<div class="col-xs-12 col-sm-6 col-md-3">
     					<div class="form-group" >
+                <small class="form-text text-muted">
+                    Código de Institución
+                </small>
                  <input #codInstitucion="ngModel" type="text" name="codInstitucion" id="codInstitucion"
                      ngControl="codInstitucion" [(ngModel)]="_modIntituciones.codInstitucion" disabled
-                     class="form-control input-lg" placeholder="Codigo de la Institucion" tabindex="1" maxlength="13" minlength="5">
+                     class="form-control input-lg" placeholder="Código de la Institución" tabindex="1" maxlength="13" minlength="5">
                     <!-- <small class="form-text text-muted" *ngIf="codInstitucion.errors?.required" >Codigo de la Institucion</small> -->
                     <!-- <small class="form-text text-muted" *ngIf="codInstitucion.errors?.minlength" >Se nesesita por lo menos {{ codInstitucion.errors.minlength.requiredLength }} caracteres</small> -->
     					</div>
@@ -47,60 +52,78 @@
           <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-3">
               <div class="form-group" >
+                <small class="form-text text-muted">
+                    Acrónimo de Institución
+                </small>
                   <input #descInstitucion="ngModel" type="text" name="descInstitucion" id="descInstitucion"
-                      ngControl="descInstitucion" [(ngModel)]="_modIntituciones.descInstitucion"
-                      class="form-control input-lg" required placeholder="Acronimo de la Institucion" tabindex="2" maxlength="20" minlength="5">
-                    <small class="form-text text-muted" *ngIf="descInstitucion.errors?.required" >Acronimo de la Institucion</small>
+                      ngControl="descInstitucion" [(ngModel)]="_modIntituciones.descInstitucion" [disabled]="habControls == false"
+                      class="form-control input-lg" required placeholder="Acrónimo de la Institución" tabindex="2" maxlength="20" minlength="2">
+                    <small class="form-text text-muted" *ngIf="descInstitucion.errors?.required" >Acrónimo de la Institución</small>
                     <small class="form-text text-muted" *ngIf="descInstitucion.errors?.minlength" >Se nesesita por lo menos {{ descInstitucion.errors.minlength.requiredLength }} caracteres</small>
               </div>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-9">
               <div class="form-group" >
+                <small class="form-text text-muted">
+                    Nombre de Institución
+                </small>
                   <input #perfilInstitucion="ngModel" type="text" name="perfilInstitucion" id="perfilInstitucion"
-                      ngControl="perfilInstitucion" [(ngModel)]="_modIntituciones.perfilInstitucion"
-                      class="form-control input-lg" required placeholder="Descripcion de la Institucion" tabindex="3" maxlength="180" minlength="10">
-                    <small class="form-text text-muted" *ngIf="perfilInstitucion.errors?.required" >Descripcion de la Institucion</small>
+                      ngControl="perfilInstitucion" [(ngModel)]="_modIntituciones.perfilInstitucion" [disabled]="habControls == false"
+                      class="form-control input-lg" required placeholder="Descripción de la Institución" tabindex="3" maxlength="180" minlength="10">
+                    <small class="form-text text-muted" *ngIf="perfilInstitucion.errors?.required" >Descripcion de la Institución</small>
                     <small class="form-text text-muted" *ngIf="perfilInstitucion.errors?.minlength" >Se nesesita por lo menos {{ perfilInstitucion.errors.minlength.requiredLength }} caracteres</small>
               </div>
-            </div>              
+            </div>
         </div>
         <!-- Fila de Datos Comunicacion -->
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-8">
               <div class="form-group" >
+                <small class="form-text text-muted">
+                    Dirección de Institución
+                </small>
                   <input #direccionInstitucion="ngModel" type="text" name="direccionInstitucion" id="direccionInstitucion"
-                      ngControl="direccionInstitucion" [(ngModel)]="_modIntituciones.direccionInstitucion"
-                      class="form-control input-lg" placeholder="Direccion de la Institucion" tabindex="4" maxlength="200" minlength="15">
+                      ngControl="direccionInstitucion" [(ngModel)]="_modIntituciones.direccionInstitucion" [disabled]="habControls == false"
+                      class="form-control input-lg" placeholder="Direccion de la Institución" tabindex="4" maxlength="200" minlength="15">
                     <!-- <small class="form-text text-muted" *ngIf="direccionInstitucion.errors?.required" >Direccion Obligatoria</small> -->
                     <!-- <small class="form-text text-muted" *ngIf="direccionInstitucion.errors?.minlength" >Se nesesita por lo menos {{ direccionInstitucion.errors.minlength.requiredLength }} caracteres</small> -->
               </div>
             </div>
             <div class="col-xs-3 col-sm-2 col-md-2">
               <div class="form-group" >
+                <small class="form-text text-muted">
+                    Teléfono de Institución
+                </small>
                   <input #telefonoInstitucion="ngModel" type="text" name="telefonoInstitucion" id="telefonoInstitucion"
-                      ngControl="telefonoInstitucion" [(ngModel)]="_modIntituciones.telefonoInstitucion"
-                      class="form-control input-lg" placeholder="Telefono" tabindex="5" >
+                      ngControl="telefonoInstitucion" [(ngModel)]="_modIntituciones.telefonoInstitucion" [disabled]="habControls == false"
+                      class="form-control input-lg" placeholder="Teléfono" tabindex="5" >
                     <!-- <small class="form-text text-muted" *ngIf="telefonoInstitucion.errors?.required" >Telefono</small> -->
                     <!-- <small class="form-text text-muted" *ngIf="telefonoInstitucion.errors?.minlength" >Se nesesita por lo menos {{ telefonoInstitucion.errors.minlength.requiredLength }} caracteres</small> -->
               </div>
             </div>
             <div class="col-xs-3 col-sm-2 col-md-2">
                 <div class="form-group" >
+                  <small class="form-text text-muted">
+                      Celular de Institución
+                  </small>
                     <input #celularInstitucion="ngModel" type="text" name="celularInstitucion" id="celularInstitucion"
-                        ngControl="celularInstitucion" [(ngModel)]="_modIntituciones.celularInstitucion"
+                        ngControl="celularInstitucion" [(ngModel)]="_modIntituciones.celularInstitucion" [disabled]="habControls == false"
                         class="form-control input-lg" placeholder="Celular" tabindex="6" >
                       <!-- <small class="form-text text-muted" *ngIf="celularInstitucion.errors?.required" >Celular</small> -->
                       <!-- <small class="form-text text-muted" *ngIf="celularInstitucion.errors?.minlength" >Se nesesita por lo menos {{ celularInstitucion.errors.minlength.requiredLength }} caracteres</small> -->
                 </div>
-              </div>              
+              </div>
         </div>
         <!-- Fila de Complementos -->
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-6">
               <div class="form-group" >
+                <small class="form-text text-muted">
+                    Email de Institución
+                </small>
                   <input #emailInstitucion="ngModel" type="text" name="emailInstitucion" id="emailInstitucion"
-                      ngControl="emailInstitucion" [(ngModel)]="_modIntituciones.emailInstitucion"
-                      class="form-control input-lg" placeholder="Email de la Institucion" tabindex="7" maxlength="13" minlength="5">
+                      ngControl="emailInstitucion" [(ngModel)]="_modIntituciones.emailInstitucion" [disabled]="habControls == false"
+                      class="form-control input-lg" placeholder="Email de la Institución" tabindex="7" maxlength="13" minlength="5">
                     <!-- <small class="form-text text-muted" *ngIf="emailInstitucion.errors?.required" >Direccion Obligatoria</small> -->
                     <!-- <small class="form-text text-muted" *ngIf="emailInstitucion.errors?.minlength" >Se nesesita por lo menos {{ emailInstitucion.errors.minlength.requiredLength }} caracteres</small> -->
               </div>
@@ -108,7 +131,10 @@
             <!-- Lista de Paises -->
   				<div class="col-xs-12 col-sm-4 col-md-2">
               <div class="form-group">
-                <select #idPais="ngModel" class="form-control" name="idPais" id="idPais" required
+                <small class="form-text text-muted">
+                    Pais de Institución
+                </small>
+                <select #idPais="ngModel" class="form-control" name="idPais" id="idPais" required [disabled]="habControls == false"
                       ngControl="idPais" [(ngModel)]="_modIntituciones.idPaisInstitucion" tabindex="8">
                     <option value="0">País</option>
                     <option *ngFor="let list of JsonOutgetlistaPaises" value="{{ list.idPais }}">{{ list.descPais }}</option>
@@ -120,32 +146,37 @@
           <!-- Tipo de Institucion -->
           <div class="col-xs-12 col-sm-6 col-md-4">
               <div class="form-group">
-                <select #idTipoInstitucion="ngModel" class="form-control" name="idTipoInstitucion" id="idTipoInstitucion" required
-                      ngControl="idTipoInstitucion" [(ngModel)]="_modIntituciones.idTipoInstitucion" tabindex="9"
-                      (change)="getlistaInstituciones()" >
+                <small class="form-text text-muted">
+                    Tipo Institución de Institución
+                </small>
+                <select #idTipoInstitucion="ngModel" class="form-control" name="idTipoInstitucion" id="idTipoInstitucion" required [disabled]="habControls == false"
+                      ngControl="idTipoInstitucion" [(ngModel)]="_modIntituciones.idTipoInstitucion" tabindex="9" >
                     <option value="0" >Tipo de Institución</option>
                     <option *ngFor="let list of JsonOutgetlistaTipoInstitucion" value="{{ list.idTipoInstitucion }}">{{ list.descTipoInstitucion }}</option>
                 </select>
                 <small class="form-text text-muted" *ngIf="idTipoInstitucion.value == 0 || idTipoInstitucion.value == null " >Debes Seleccionar un tipo de Institución</small>
               </div>
-            </div>         
+            </div>
         </div>
         <!-- Botones Accion del Formulario -->
         <hr class="colorgraph">
         <div class="row">
           <div class="col-xs-4 col-md-2">
-              <input type="submit" value="Guardar" class="btn btn-primary btn-block btn-lg" tabindex="10" 
+              <input style="cursor: pointer;" type="submit" value="Guardar" class="btn btn-primary btn-block btn-lg" tabindex="10"
                 [disabled]="!mantenimientoForm.valid"  >
           </div>
           <div class="col-xs-4 col-md-2">
-  
-              <a  class="btn btn-success btn-block btn-lg"
+              <a style="cursor: pointer;" class="btn btn-success btn-block btn-lg"
                  (click)="resetForm()" >Nuevo</a>
+          </div>
+          <div class="col-xs-4 col-md-2">
+              <a style="cursor: pointer;" class="btn btn-warning btn-block btn-lg"
+                 (click)="inHabilitarControl()" >Cancelar</a>
           </div>
         </div>
 
       </form> <!-- Fin del Formulario -->
-    </div> 
+    </div>
     <!-- Fin del Colapsable -->
 
       <hr>
@@ -156,13 +187,14 @@
           <img src="assets/images/832.gif" alt="Cargando Tareas">
         </div>
 
-        <div class="col-xs-12 col-md-12 col-lg-12" *ngIf=" loading == 'hide'">        
+        <div class="col-xs-12 col-md-12 col-lg-12" *ngIf=" loading == 'hide'">
           <table id="example" class="table table-striped table-bordered" cellspacing="0"  >
 
               <thead >
-                  <tr>                    
-                    <th>Id</th>                    
+                  <tr>
+                    <th>Id</th>
                     <th>Nombre Institución</th>
+                    <th>Descripción Institución</th>
                     <th>Tipo Institución</th>
                     <th>Pais Institución</th>
                     <th>Direccion</th>
@@ -172,32 +204,33 @@
                     <th>Ver</th>
                   </tr>
               </thead>
-      
+
               <tbody >
-                  <tr *ngFor="let item of JsonOutgetlistaInstitucion ">                    
-                    <td> {{ item.codInstitucion }} </td>                    
+                  <tr *ngFor="let item of JsonOutgetlistaInstitucion ">
+                    <td> {{ item.codInstitucion }} </td>
                     <td style="cursor: help" title="Descripcion: {{ item.perfilInstitucion }}"> {{ item.descInstitucion }} </td>
-                    <td> {{ item.descTipoInstitucion  }} </td>                    
-                    <td> {{ item.descPais  }} </td>                    
+                    <td> {{ item.perfilInstitucion  }} </td>
+                    <td> {{ item.descTipoInstitucion  }} </td>
+                    <td> {{ item.descPais  }} </td>
                     <td > {{ item.direccionInstitucion }} </td>
                     <td > {{ item.emailInstitucion }} </td>
                     <!-- <td > {{ item.telefonoInstitucion }} - {{ item.celularInstitucion }} </td>                       -->
-                    <td> {{ item.fechaIngreso | date :'dd-MMM-yyyy' }} </td>                    
-                    <td> <a href="/#" (click)="datoInstitucion( 
+                    <td> {{ item.fechaIngreso | date :'dd-MMM-yyyy' }} </td>
+                    <td> <a href="/#" (click)="datoInstitucion(
                             item.idInstitucion,
                             item.codInstitucion,
                             item.descInstitucion, item.perfilInstitucion,
                             item.direccionInstitucion, item.telefonoInstitucion,
                             item.celularInstitucion, item.emailInstitucion,
                             item.idPais, item.idTipoInstitucion )"
-                          data-toggle="modal" data-target="#t_and_c_m" >                          
+                          data-toggle="collapse" data-target="#datosGen" >
                           <img src="/assets/icons/comunicacion/clipboard-edit-black-interface-symbol.png" class="d-inline-block align-top" alt="" title="Asignar Comunicación">
-                        </a> 
+                        </a>
                     </td>
                   </tr>
               </tbody>
           </table>
-          
+
         </div>
   </div>
   <!-- Fin de Container -->
