--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/seguimiento.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/seguimiento.actividad.component.html
@@ -350,7 +350,7 @@
                     <tr>
                       <th>#</th>
                       <th>Código Documento</th>
-                      <th>Fecha Creacion</th>
+                      <th>Fecha Creación</th>
                       <th>Documento</th>
                       <th>Descargar</th>
                     </tr>
@@ -359,7 +359,7 @@
                     <tr *ngFor="let item of JsonOutgetlistaDocumentos; let i = index">
                       <th scope="row">{{ i + 1 }}</th>
                       <td>{{ item.codDocumento }}</td>
-                      <td>{{ item.fechaIngreso.timestamp | generateDate }}</td>
+                      <td>{{ item.fechaIngreso | date :'dd-MMM-yyyy' }}</td>
                       <td>{{ item.urlDocumento }}</td>
                       <td>
                         <a *ngIf="item.urlDocumento != null && item.urlDocumento.length > 5"
