--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -74,6 +74,7 @@
                       <th>Institución Remitente</th>
                       <!-- <th>Descripción / Comunicación</th> -->
                       <th>Tema / Comunicación</th>
+                      <th>Funcionario Asignado</th>
                       <th>Estado</th>
                       <th>Ver</th>
                   </tr>
@@ -89,6 +90,7 @@
                       {{ item.descInstitucion }}
                   </td>
                   <!-- <td class="cortar">{{ item.descCorrespondenciaEnc }}</td> -->
+                  <td > {{ item.nombre1Funcionario }} - {{ item.apellido1Funcionario }} </td>
                   <td style="cursor: help" title="Descripción: {{ item.descCorrespondenciaEnc }} ">
                       {{ item.temaComunicacion }}
                   </td>
@@ -260,10 +262,14 @@
                               <!-- Fin de Tabla de documentos -->
                         </div>
                     </div>
+                    <hr class="colorgraph">
+
+                    <button type="button" id="closeModalFinCom" class="btn btn-danger" data-dismiss="modal" style="cursor: pointer">Cerrar</button>
                   </div>
                   </div>
 
-                    <hr class="colorgraph">
+
+
             			</div>
 
             		</div><!-- /.modal-content -->
