--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
@@ -255,7 +255,7 @@
             <td>{{ item.fechaIngreso | date :'dd-MMM-yyyy' }}</td>
             <td>{{ item.fechaFinalizacion | date :'dd-MMM-yyyy' }}</td>
             <td style="cursor:help" title="Nombre: {{ item.perfilInstitucion }}" >{{ item.descInstitucion }}</td>
-            <td>{{ item.temaComunicacion }}</td>
+            <td style="cursor:help" title="Descripción: {{ item.descCorrespondenciaEnc }}">{{ item.temaComunicacion }}</td>
             <td>{{ item.descCorrespondenciaEnc }}</td>
             <td>{{ item.descripcionEstado }}</td>
           </tr>
