--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
@@ -216,6 +216,11 @@
             <img src="assets/images/745.gif" alt="Cargando Tareas">
           </div>
 
+          <!-- Loader de Carga de la Pagina -->
+          <div class="loader-new" *ngIf="loading_tableIn == 'show' " >          
+            <img id="imgload" src="assets/images/745.gif" alt="Cargando Tareas">
+          </div>
+
       </form> <!-- Fin de Formulario de Seleccion de Criterios de Busqueda -->
       </div>
 
