--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/seguimiento.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/seguimiento.actividad.component.html
@@ -9,6 +9,11 @@
     <img src="assets/images/745.gif" alt="Cargando Tareas">
   </div>
 
+  <!-- Loader de Carga de la Pagina -->
+  <div class="loader-new" *ngIf="loading == 'show' " >
+    <img id="imgload" src="assets/images/745.gif" alt="Cargando Tareas">
+  </div>
+
   <div class="row">
     <div class="col-lg-8">
       <div class="input-group">
