--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.css
@@ -24,3 +24,21 @@
   border-color:  #a94442 !important; /* red */
   box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(169,68,66,.6) !important;
 }
+
+
+/* Estilo para la Carga de Pantalla Completa */
+.loader-new {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background:  rgb(230, 232, 233);
+  opacity: .8;
+}
+
+#imgload{
+  margin-left: 40%;
+  margin-top: 20%
+}
