--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.css
@@ -31,3 +31,20 @@
   margin-top:10px;
   margin-bottom:10px
 }
+
+/* Estilo para la Carga de Pantalla Completa */
+.loader-new {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background:  rgb(230, 232, 233);
+  opacity: .8;
+}
+
+#imgload{
+  margin-left: 40%;
+  margin-top: 20%
+}
