--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -87,8 +87,8 @@
   					<div class="form-group" >
                <input #temaCorrespondencia="ngModel" type="text" name="temaCorrespondencia" id="temaCorrespondencia"
                     ngControl="temaCorrespondencia" [(ngModel)]="comunicacion.temaCorrespondencia"
-                   class="form-control input-lg" required placeholder="Tema de la Comunicacion" tabindex="2" minlength="7">
-                  <small class="form-text text-muted" *ngIf="temaCorrespondencia.errors?.required" >Ingresa el Tema de la Comunicacion</small>
+                   class="form-control input-lg" required placeholder="Tema de la Comunicación" tabindex="2" maxlength="60" minlength="7">
+                  <small class="form-text text-muted" *ngIf="temaCorrespondencia.errors?.required" >Ingresa el Tema de la Comunicación</small>
                   <small class="form-text text-muted" *ngIf="temaCorrespondencia.errors?.minlength" >Se nesesita por lo menos {{ temaCorrespondencia.errors.minlength.requiredLength }} caracteres</small>
   					</div>
   				</div>
@@ -284,7 +284,7 @@
                    placeholder="Selecciona un Funcionario de contacto" (selected)="onSelectedFunc($event)" >
                </ng2-completer>
 
-               <textarea #observaciones="ngModel" class="form-control" id="setTomail" name="setTomail" rows="3"
+               <textarea #setTomail="ngModel" class="form-control" id="setTomail" name="setTomail" rows="3"
                    tabindex="3" disabled
                    ngControl="setTomail" [(ngModel)]="comunicacion.setTomail">{{selectedFuncionarioAll}}</textarea>
                 <!-- <p><strong>Copia a:</strong> {{selectedFuncionarioAll}}</p> -->
